Add some basic HTML to the page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-Hello world.
+<html>
+  <head>
+    <title>Welcome to brucebolt.com</title>
+  </head>
 
-Interested in buying this domain? Email <a href="mailto:domains@brucebolt.com">me</a>.
+  <body>
+    <p>Hello world.</p>
+
+    <p>Interested in buying this domain? Email <a href="mailto:domains@brucebolt.com">me</a>.</p>
+  </body>
+</html>
